--- a/index.html
+++ b/index.html
@@ -1,45 +1,88 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./style.css" />
-    <style>
-      @import url("https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,400;0,700;1,600&display=swap");
-    </style>
 
-    <title>Tabela de preços</title>
-  </head>
-  <body>
-    <div class="top">
-      <div class="text">
-        <h1>Conheça nossos planos</h1>
-        <p>
-          Conheça nossas soluçoes e escolha o plano para o seu<br />
-          próximo projeto.
-        </p>
-      </div>
+<head>
+  <meta charset="UTF-8" />
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;700&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="./style.css" />
+
+  <title>Tabela de preços</title>
+</head>
+
+<body>
+  <div class="top">
+    <div class="text">
+      <h1>Conheça nossos planos</h1>
+      <p>
+        Conheça nossas soluçoes e escolha o plano para o seu<br />
+        próximo projeto.
+      </p>
     </div>
+  </div>
 
-    <div class="card-1">
-      <div><p >Free</p></div>
-      <img class="item-1" src="./assets/assets/price.png"></img>
-       <p class="item-2">Lorem ipsum dolor sit amet, consectetur<br> adipisicing elit.</p>
-       <img class="dashed" src="./assets/assets/divider.png"/>
-       <div>
+  <div class="cards-container">
+    <div class="card">
+      <header>
+        <p class="plan-name">Free</p>
+        <h2 class="price">
+          R$ 0<span>,00</span><span> /mês</span>
+        </h2>
+      </header>
+      <main>
         <ul>
-           <li>
+          <li>
             <img src="./assets/assets/check.svg"><span>Lorem ipsum dolor sit amet</span></img>
-           <li>
-             <li>
+          <li>
+          <li>
             <img src="./assets/assets/check.svg"><span>Lorem ipsum dolor sit amet</span></img>
-             </li>
-         </ul>
-        </div>
-     <div>
+          </li>
+        </ul>
+      </main>
       <button>ASSINAR</button>
-     </div>
     </div>
-  </body>
+    <div class="card">
+      <header>
+        <p class="plan-name">Free</p>
+        <h2 class="price">
+          R$ 0<span>,00</span><span> /mês</span>
+        </h2>
+      </header>
+      <main>
+        <ul>
+          <li>
+            <img src="./assets/assets/check.svg"><span>Lorem ipsum dolor sit amet</span></img>
+          <li>
+          <li>
+            <img src="./assets/assets/check.svg"><span>Lorem ipsum dolor sit amet</span></img>
+          </li>
+        </ul>
+      </main>
+      <button>ASSINAR</button>
+    </div>
+    <div class="card">
+      <header>
+        <p class="plan-name">Free</p>
+        <h2 class="price">
+          R$ 0<span>,00</span><span> /mês</span>
+        </h2>
+      </header>
+      <main>
+        <ul>
+          <li>
+            <img src="./assets/assets/check.svg"><span>Lorem ipsum dolor sit amet</span></img>
+          <li>
+          <li>
+            <img src="./assets/assets/check.svg"><span>Lorem ipsum dolor sit amet</span></img>
+          </li>
+        </ul>
+      </main>
+      <button>ASSINAR</button>
+    </div>
+  </div>
+</body>
+
 </html>
