--- a/index.html
+++ b/index.html
@@ -46,9 +46,12 @@
     </div>
     <div class="card">
       <header>
+        <div class="pop">
+        <span>Básico</span><span>Popular</span>
+      </div>
         <p class="plan-name">Free</p>
         <h2 class="price">
-          R$ 0<span>,00</span><span> /mês</span>
+          R$ 29<span>,00</span><span> /mês</span>
         </h2>
       </header>
       <main>
@@ -67,7 +70,7 @@
       <header>
         <p class="plan-name">Free</p>
         <h2 class="price">
-          R$ 0<span>,00</span><span> /mês</span>
+          R$ 59<span>,00</span><span> /mês</span>
         </h2>
       </header>
       <main>
