tabela-de-preco

--- a/index.html
+++ b/index.html
@@ -35,10 +35,10 @@
       <main>
         <ul>
           <li>
-            <img src="./assets/assets/check.svg"><span>Lorem ipsum dolor sit amet</span></img>
+            <img src="./assets/assets/check.svg"><span>Lorem ipsum dolor sit </span></img>
           <li>
           <li>
-            <img src="./assets/assets/check.svg"><span>Lorem ipsum dolor sit amet</span></img>
+            <img src="./assets/assets/check.svg"><span>Lorem ipsum dolor sit </span></img>
           </li>
         </ul>
       </main>
