--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 
 <head>
   <meta charset="UTF-8" />
@@ -46,10 +46,8 @@
     </div>
     <div class="card">
       <header>
-        <div class="pop">
-        <span>Básico</span><span>Popular</span>
-      </div>
-        <p class="plan-name">Free</p>
+      
+        <p class="plan-name">Básico</p>
         <h2 class="price">
           R$ 29<span>,00</span><span> /mês</span>
         </h2>
@@ -68,7 +66,7 @@
     </div>
     <div class="card">
       <header>
-        <p class="plan-name">Free</p>
+        <p class="plan-name">Profissional</p>
         <h2 class="price">
           R$ 59<span>,00</span><span> /mês</span>
         </h2>
